Fixing the nav bar alignment

--- a/src/index.css
+++ b/src/index.css
@@ -174,6 +174,7 @@ code {
 
 .nav li.user {
   margin-right: 20px;
+  margin-left: auto;
   display: flex;
   justify-self: end;
   justify-content: flex-end;
